<resources>
    <string name="app_name">instagram</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="instagram_logo">Instagram logo</string>
    <string name="home">Home</string>
    <string name="publish">Publish</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="change_photo">Change profile photo</string>
    <string name="log_out">Log out</string>
    <string name="profile_photo">Profile photo</string>
    <string name="accept_changes">Accept changes</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
    <string name="write_caption">Write a caption...</string>
    <string name="add_location">Add location</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="incorrect_login">Incorrect credentials</string>
    <string name="incorrect_login_txt">The username or password you entered is incorrect. Please try again.</string>
    <string name="date">Date</string>
</resources>